--- a/scaffold/plank-files/dot-travis.yml
+++ b/scaffold/plank-files/dot-travis.yml
@@ -45,9 +45,9 @@ before_script:
 # `raco pkg install --deps search-auto` to install any required
 # packages without it getting stuck on a confirmation prompt.
 script:
- - raco test {{content-name}}/test
+ - raco test {{package-name}}/test
 
 after_success:
- - raco setup --check-pkg-deps --pkgs {{content-name}}
+ - raco setup --check-pkg-deps --pkgs {{package-name}}
  - raco pkg install --deps search-auto cover cover-coveralls
  - raco cover -b -f coveralls -d $TRAVIS_BUILD_DIR/coverage .
