--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ env:
     # create a Travis-CI build matrix to test against multiple Racket
     # versions.
     # - RACKET_VERSION=6.5
-    - RACKET_VERSION=6.6
-    - RACKET_VERSION=6.7
+    # - RACKET_VERSION=6.6
+    # - RACKET_VERSION=6.7
     - RACKET_VERSION=6.8
     - RACKET_VERSION=6.9
     - RACKET_VERSION=6.10
