--- a/scaffold/plank-files/dot-travis.yml
+++ b/scaffold/plank-files/dot-travis.yml
@@ -45,7 +45,7 @@ before_script:
 # `raco pkg install --deps search-auto` to install any required
 # packages without it getting stuck on a confirmation prompt.
 script:
- - raco test {{test-dir}}
+ - raco test -t -c {{collection-name}}
 
 after_success:
  - raco setup --check-pkg-deps --pkgs {{package-name}}
