--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ before_script:
 # `raco pkg install --deps search-auto` to install any required
 # packages without it getting stuck on a confirmation prompt.
 script:
- - raco test scaffold/test
+ - raco test -t -c scaffold
 
 after_success:
  - raco setup --check-pkg-deps --pkgs racket-scaffold
